--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ jobs:
       - image: cimg/node:17.4.0
     steps:
       - checkout
-      - run:ci
-          name:Update NPM
+      - run:
+          name: Update NPM
           command: "sudo npm install -g npm"
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
